scotia-peru-aks/viya/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-gen-ai-gateway/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-genAiGateway
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-gen-ai-gateway
    sas.com/admin: namespace
  name: sas-gen-ai-gateway
spec:
  host: $(INGRESS_HOST)
  path: /genAiGateway
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-gen-ai-gateway
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-genAiGateway
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-gen-ai-gateway
    sas.com/admin: namespace
  name: sas-gen-ai-gateway-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /genAiGateway
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-gen-ai-gateway
  wildcardPolicy: Subdomain
